--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,11 +1,13 @@
 $blue: blue
 $text: #282828
 $bluelg:  #507fe1
+$bg: #f1f1f1
 
 @import 'fonts'
 @import 'settings'
 @import 'header'
 @import 'view'
+@import 'action'
 
 
 
@@ -21,5 +23,8 @@ button:focus, input:focus
 
 textarea:focus
 	outline: none !important
+
+.bg
+	background-color: $bg
 
 
