--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,7 +8,11 @@ $bg: #f1f1f1
 @import 'header'
 @import 'view'
 @import 'action'
-
+@import 'features'
+@import 'catalog'
+@import 'blog'
+@import 'price'
+@import 'steps'
 
 
 *,*::after,*::before
@@ -23,8 +27,27 @@ button:focus, input:focus
 
 textarea:focus
 	outline: none !important
+img
+	max-width: 100%
 
 .bg
 	background-color: $bg
+
+.section
+	padding: 80px 0
+	&_title
+		font-size: 30px
+		text-align: center
+		text-transform: uppercase
+		margin: 0
+		margin-bottom: 100px
+
+@media (max-width: 575.98px)
+	.section
+		padding: 40px 0
+		&_title
+			font-size: 24px
+			margin-bottom: 50px
+
 
 
