--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -39,6 +39,7 @@
 		width: 100%
 		background-color: #fff
 		z-index: 5000
+		opacity: 0.9
 	&_button
 		border: none
 		background-color: transparent
