--- a/sass/main.sass
+++ b/sass/main.sass
@@ -13,6 +13,13 @@ $bg: #f1f1f1
 @import 'blog'
 @import 'price'
 @import 'steps'
+@import 'realize'
+@import 'review'
+@import 'production'
+@import 'contact'
+@import 'faq'
+@import 'footer'
+
 
 
 *,*::after,*::before
@@ -22,7 +29,7 @@ body
 	@include semi()
 	color: $text
 
-button:focus, input:focus
+button:focus, input:focus, select:focus
 	outline: none !important
 
 textarea:focus
