--- a/sass/_catalog.sass
+++ b/sass/_catalog.sass
@@ -10,6 +10,10 @@
 		max-width: 570px
 		margin-bottom: 30px
 		box-shadow: 7px 5px 21px rgba(0,0,0,0.4)
+		overflow-y: hidden
+		&:hover .catalog_button
+			opacity: 1
+			transform: translateY(0)
 	&_type
 		position: absolute
 		top: 8px
@@ -23,6 +27,9 @@
 		position: absolute
 		bottom: 0px
 		right: 0
+		transition: all 0.6s
+		opacity: 0
+		transform: translateY(100%)
 		display: flex
 		&_first
 			background-color: #fff
