--- a/sass/main.sass
+++ b/sass/main.sass
@@ -49,6 +49,53 @@ img
 		margin: 0
 		margin-bottom: 100px
 
+.overlay
+	position: fixed
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	background-color: rgba(0,0,0,0.8)
+	z-index: 9999
+	display: none
+
+.modal
+	&_dialog
+		background-color: #f1f1f1
+		width: 280px
+		transition: all 1.5s
+		position: absolute
+		padding: 20px
+		left: 50%
+		top: 50px
+		margin-left: -140px
+		text-align: center
+		input
+			width: 100%
+			padding: 10px 0
+			padding-left: 10px
+			padding-right: 40px
+			margin-bottom: 10px
+		button[type="submit"]
+			@extend .view_button
+			padding: 10px
+			width: 100%
+	&_title
+		margin: 0
+		margin-bottom: 20px
+		text-transform: uppercase
+	&_close
+		position: absolute
+		right: 10px
+		top: 5px
+		font-size: 32px
+		border: none
+		background-color: transparent
+		color: $bluelg
+		cursor: pointer
+
+
+
 @media (max-width: 575.98px)
 	.section
 		padding: 40px 0
