Последний коммит перед офф оптим2

--- a/sass/_steps.sass
+++ b/sass/_steps.sass
@@ -25,6 +25,7 @@
 			max-width: 150px
 			margin: auto
 			line-height: 1.4
+			min-height: 110px
 		&_title
 			font-size: 18px
 			text-transform: uppercase
